k8s/rendertron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: rendertron-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rendertron
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: rendertron
    spec:
      restartPolicy: Always
      containers:
        - name: rendertron
          # Pulls the default Rendertron image from Docker Hub
          image: ygou/rendertron:2.0.1.1
          ports:
            - containerPort: 3000
              hostPort: 3000
          livenessProbe:
            httpGet:
              path: /render/https://google.com
              port: 3000
            failureThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /render/https://google.com
              port: 3000
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 10
