k8s/rendertron-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rendertron-service
spec:
  type: NodePort
  ports:
    - port: 3030
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
  selector:
    app: rendertron
