k8s/rendertron-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rendertron-service
spec:
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: 3000
      protocol: TCP
  selector:
    app: rendertron
