k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /render/https://$1$2$3
spec:
  rules:
    - http:
        paths:
          - path: /https:/(.+)(/?)(.*)
            backend:
              serviceName: rendertron-service
              servicePort: 3030
